--- a/Dance With The World/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/Dance With The World/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -159,7 +159,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":-446.8000183105469,\"y\":0.0,\"z\":440.8000183105469}}"
+                "value": "{\"m_Value\":{\"x\":29917.30078125,\"y\":0.0,\"z\":58306.5}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
