--- a/Dance With The World/Packages/manifest.json
+++ b/Dance With The World/Packages/manifest.json
@@ -4,11 +4,13 @@
     "com.unity.collab-proxy": "2.10.0",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.mathematics": "1.3.3",
     "com.unity.polybrush": "1.1.8",
     "com.unity.probuilder": "5.2.4",
     "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.render-pipelines.high-definition": "14.0.12",
     "com.unity.render-pipelines.universal": "14.0.12",
+    "com.unity.searcher": "4.9.4",
     "com.unity.shadergraph": "14.0.12",
     "com.unity.splines": "2.8.2",
     "com.unity.test-framework": "1.1.33",
